# mocap4r2

./: README.md  dependency_repos.repos
.github/workflows/: humble-devel.yaml  main.yaml  rolling.yaml
mocap4r2_control/mocap4r2_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
mocap4r2_control/mocap4r2_control/include/mocap4r2_control/: AuxiliarNode.hpp  ControlledLifecycleNode.hpp  ControllerNode.hpp
mocap4r2_control/mocap4r2_control/launch/: auxiliar.launch.py
mocap4r2_control/mocap4r2_control/src/: auxiliar_main.cpp
mocap4r2_control/mocap4r2_control/src/mocap4r2_control/: AuxiliarNode.cpp  ControlledLifecycleNode.cpp  ControllerNode.cpp
mocap4r2_control/mocap4r2_control/test/: test_auxiliar.cpp  test_control.cpp
mocap4r2_control/mocap4r2_control_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  mocap4r2_control_bridge_mapping_rule.yaml  package.xml
mocap4r2_control/mocap4r2_control_msgs/msg/: Control.msg  MocapInfo.msg
mocap4r2_control/rqt_mocap4r2_control/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin.xml  setup.py
mocap4r2_control/rqt_mocap4r2_control/include/rqt_mocap4r2_control/: SystemController.hpp  mocap4r2_control.hpp  utils.hpp
mocap4r2_control/rqt_mocap4r2_control/scripts/: rqt_mocap4r2_control
mocap4r2_control/rqt_mocap4r2_control/src/rqt_mocap4r2_control/: SystemController.cpp  mocap4r2_control.cpp
mocap4r2_dummy_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
mocap4r2_dummy_driver/include/mocap4r2_dummy_driver/: mocap4r2_dummy_driver.hpp
mocap4r2_dummy_driver/launch/: dummy.launch.py
mocap4r2_dummy_driver/src/: mocap4r2_dummy_driver_main.cpp
mocap4r2_dummy_driver/src/mocap4r2_dummy_driver/: mocap4r2_dummy_driver.cpp
mocap4r2_marker_viz/mocap4r2_marker_publisher/: CHANGELOG.rst  CMakeLists.txt  package.xml
mocap4r2_marker_viz/mocap4r2_marker_publisher/src/: mocap4r2_marker_publisher.cpp
mocap4r2_marker_viz/mocap4r2_marker_viz/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mocap4r2_marker_viz/mocap4r2_marker_viz/include/mocap4r2_marker_viz/: mocap4r2_marker_viz_node.hpp
mocap4r2_marker_viz/mocap4r2_marker_viz/launch/: mocap4r2_marker_viz.launch.py
mocap4r2_marker_viz/mocap4r2_marker_viz/rviz/: config.rviz
mocap4r2_marker_viz/mocap4r2_marker_viz/src/: mocap4r2_marker_viz_main.cpp  mocap4r2_marker_viz_node.cpp
mocap4r2_marker_viz/mocap4r2_marker_viz_srvs/: CHANGELOG.rst  CMakeLists.txt  package.xml
mocap4r2_marker_viz/mocap4r2_marker_viz_srvs/srv/: SetMarkerColor.srv
mocap4r2_robot_gt/mocap4r2_robot_gt/: CHANGELOG.rst  CMakeLists.txt  package.xml
mocap4r2_robot_gt/mocap4r2_robot_gt/include/mocap4r2_robot_gt/: gt_component.hpp  set_gt_component.hpp
mocap4r2_robot_gt/mocap4r2_robot_gt/src/: gt_program.cpp  set_gt_cli.cpp
mocap4r2_robot_gt/mocap4r2_robot_gt/src/mocap4r2_robot_gt/: gt_component.cpp  set_gt_component.cpp
mocap4r2_robot_gt/mocap4r2_robot_gt_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
mocap4r2cli/: README.md  package.xml  setup.py
mocap4r2cli/mocap4r2cli/api/: __init__.py
mocap4r2cli/mocap4r2cli/command/: mocap4r2.py
mocap4r2cli/mocap4r2cli/verb/: __init__.py  start.py  status.py  stop.py
mocap_control/mocap_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
mocap_control/mocap_control/config/: config_example.yaml
mocap_control/mocap_control/include/mocap_control/: AuxiliarNode.hpp  ControlledLifecycleNode.hpp  ControllerNode.hpp
mocap_control/mocap_control/launch/: auxiliar.launch.py
mocap_control/mocap_control/src/: auxiliar_main.cpp
mocap_control/mocap_control/src/mocap_control/: AuxiliarNode.cpp  ControlledLifecycleNode.cpp  ControllerNode.cpp
mocap_control/mocap_control/test/: CMakeLists.txt  test_auxiliar.cpp  test_control.cpp
mocap_control/mocap_control_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  mocap_control_bridge_mapping_rule.yaml  package.xml
mocap_control/mocap_control_msgs/msg/: Control.msg  MocapInfo.msg
mocap_control/rqt_mocap_control/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin.xml  setup.py
mocap_control/rqt_mocap_control/include/rqt_mocap_control/: SystemController.hpp  mocap_control.hpp  utils.hpp
mocap_control/rqt_mocap_control/scripts/: rqt_mocap_control
mocap_control/rqt_mocap_control/src/rqt_mocap_control/: SystemController.cpp  mocap_control.cpp  mocap_control.ui
mocap_marker_viz/mocap_marker_publisher/: CHANGELOG.rst  CMakeLists.txt  package.xml
mocap_marker_viz/mocap_marker_publisher/src/: mocap_marker_publisher.cpp
mocap_marker_viz/mocap_marker_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml
mocap_marker_viz/mocap_marker_viz/include/mocap_marker_viz/: mocap_marker_viz_node.hpp
mocap_marker_viz/mocap_marker_viz/launch/: mocap_marker_viz.launch.py
mocap_marker_viz/mocap_marker_viz/rviz/: config.rviz
mocap_marker_viz/mocap_marker_viz/src/: mocap_marker_viz_main.cpp  mocap_marker_viz_node.cpp
mocap_marker_viz/mocap_marker_viz_srvs/: CHANGELOG.rst  CMakeLists.txt  package.xml
mocap_marker_viz/mocap_marker_viz_srvs/srv/: ResetMarkerColor.srv
mocap_robot_gt/: CMakeLists.txt  package.xml
mocap_robot_gt/include/mocap_robot_gt/: gt_component.hpp  set_gt_component.hpp
mocap_robot_gt/mocap_robot_gt/: CHANGELOG.rst  CMakeLists.txt  package.xml
mocap_robot_gt/mocap_robot_gt/include/mocap_robot_gt/: gt_component.hpp  set_gt_component.hpp
mocap_robot_gt/mocap_robot_gt/src/: set_gt_cli.cpp
mocap_robot_gt/mocap_robot_gt/src/mocap_robot_gt/: gt_component.cpp  set_gt_component.cpp
mocap_robot_gt/mocap_robot_gt_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
mocap_robot_gt/mocap_robot_gt_msgs/srv/: SetGTOrigin.srv
mocap_robot_gt/src/: gt_program.cpp
mocap_robot_gt/src/mocap_robot_gt/: gt_component.cpp  set_gt_component.cpp
