<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>mocap4r2cli</name>
  <version>0.0.0</version>
  <description>
    Command line tools for MOCAP4ROS2 Project.
  </description>
  <maintainer email="fmrico@gmail.com">Francisco Martín</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2cli</exec_depend>
  <exec_depend>mocap4r2_control_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
