<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_mocap4r2_control</name>
  <version>0.0.7</version>
  <description>Control tools GUI</description>
  <maintainer email="fmrico@gmail.com">Francisco Martín Rico</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>qtbase5-dev</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>qt_gui_cpp</depend>
  <depend>mocap4r2_control</depend>
  <depend>mocap4r2_control_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
