<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mocap_marker_publisher</name>
  <version>0.0.1</version>
  <description>Node for publishing some simple marker data for testing purposes</description>
  <maintainer email="floris.erich@aist.go.jp">floris</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>mocap_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
